--- a/views/addCourse.hbs
+++ b/views/addCourse.hbs
@@ -17,6 +17,8 @@
         <input id="img" name="img" type="text" class="validate">
         <label for="img">Add img</label>
     </div>
+    
+    <input type="hidden" name="_csrf" value="{{csrf}}">
 
     <button class="btn btn-primary">Add course</button>
 </form>
