--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -19,7 +19,12 @@
                     <input id="password" name="password" type="password" class="validate" required>
                     <label for="password">Password</label>
                     <span class="helper-text" data-error="Input password"></span>
+                    {{#if loginError}}
+                        <p class="alert">{{loginError}}</p>
+                    {{/if}}
                 </div>
+
+                <input type="hidden" name="_csrf" value="{{csrf}}">
 
                 <button class="btn btn-primary" type="submit">Log In</button>
             </form>
@@ -31,6 +36,9 @@
                     <input id="remail" name="email" type="email" class="validate" required>
                     <label for="remail">Email</label>
                     <span class="helper-text" data-error="Input email"></span>
+                     {{#if registerError}}
+                        <p class="alert">{{registerError}}</p>
+                    {{/if}}
                 </div>
 
                 <div class="input-field">
@@ -50,6 +58,8 @@
                     <label for="name">Name</label>
                     <span class="helper-text" data-error="Input name"></span>
                 </div>
+
+                <input type="hidden" name="_csrf" value="{{csrf}}">
 
                 <button class="btn btn-primary" type="submit">Create an account</button>
             </form>
