--- a/views/course-edit.hbs
+++ b/views/course-edit.hbs
@@ -19,11 +19,14 @@
     </div>
 
     <input type="hidden" name="id" value="{{course.id}}">
+    <input type="hidden" name="_csrf" value="{{csrf}}">
 
     <button class="btn btn-primary">Edit course</button>
 </form>
 
 <form action="/courses/remove" method="POST">
     <input type="hidden" name="id" value="{{course.id}}">
+    <input type="hidden" name="_csrf" value="{{csrf}}">
+
     <button type="submit" class="btn red">Delete</button>
 </form>
